-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b06
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2222993 | 8 | Bengt Rutisson | P4 | Closed | Fixed | b33 |
| JDK-8018174 | 7u45 | Bengt Rutisson | P4 | Closed | Fixed | b01 |
| JDK-8002450 | 7u40 | Bengt Rutisson | P4 | Closed | Fixed | b01 |
5 methods in CollectedHeap take a size parameter without using it.
There are also two more minor cleanups that needs to be done:
- The comment for G1CollectorPolicy::next_gc_should_be_mixed() needs an update
- The declaration of CollectedHeap::initialize_heap_log() is not needed
There are also two more minor cleanups that needs to be done:
- The comment for G1CollectorPolicy::next_gc_should_be_mixed() needs an update
- The declaration of CollectedHeap::initialize_heap_log() is not needed
- backported by
-
JDK-2222993 Remove unused size parameter from some CollectedHeap methods
-
- Closed
-
-
JDK-8002450 Remove unused size parameter from some CollectedHeap methods
-
- Closed
-
-
JDK-8018174 Remove unused size parameter from some CollectedHeap methods
-
- Closed
-