7156764: Remove unused size parameter from some CollectedHeap methods

Some minor cleanups

Reviewed-by: tonyp, jwilhelm